--- a/www/static/css/index.css
+++ b/www/static/css/index.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 #fps {
